--- a/package.json
+++ b/package.json
@@ -1,57 +1,83 @@
 {
-  "name": "express-prisma-template",
+  "name": "ray-vapes-vape-shop-api",
   "version": "1.0.0",
-  "description": "A ready-to-use Express + Prisma backend template with TypeScript, Zod, Swagger, and Sentry.",
+  "description": "API Server for Ray Vapes VapeShop, providing endpoints for managing products, and orders",
+  "private": true,
   "author": {
     "name": "Andrew Kononenko [wastardy]",
     "email": "wastardy.k@gmail.com",
     "url": "https://github.com/wastardy"
   },
   "dependencies": {
-    "@prisma/client": "^6",
+    "@prisma/client": "^6.8.2",
     "@sentry/cli": "^2",
     "@sentry/node": "^8",
     "@sentry/profiling-node": "^8",
-    "dotenv": "^16",
-    "express": "^4",
-    "swagger-jsdoc": "^6",
-    "swagger-ui-express": "^5",
-    "zod": "^3"
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-basic-auth": "^1.2.1",
+    "express-rate-limit": "^7.5.0",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
-    "@eslint/js": "^9",
-    "@types/express": "^5",
-    "@types/jest": "^29",
-    "@types/node": "^22",
-    "@types/supertest": "^6",
-    "@types/swagger-jsdoc": "^6",
-    "@types/swagger-ui-express": "^4",
+    "@eslint/js": "^9.27.0",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.21",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
-    "eslint": "^9",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^9",
-    "eslint-plugin-prettier": "^5",
-    "prettier": "^3",
-    "prettier-plugin-prisma": "^5",
-    "prisma": "^6",
-    "supertest": "^7",
-    "ts-jest": "^29",
-    "tsx": "^4",
-    "typescript": "^5"
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import-alias": "^1.2.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prisma": "^6.8.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   },
   "scripts": {
     "build": "tsc",
-    "db:migrate": "prisma migrate deploy",
     "db:reset": "prisma migrate reset",
+    "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
     "dev": "tsx watch src/index.ts",
+    "dev:docker": "docker-compose -f docker/docker-compose.dev.yml --env-file .env -p ray-vapes-dev up -d",
+    "dev:docker:stop": "docker-compose -f docker/docker-compose.dev.yml --env-file .env -p ray-vapes-dev stop",
+    "dev:docker:down": "docker-compose -f docker/docker-compose.dev.yml --env-file .env -p ray-vapes-dev down",
+    "dev:docker:logs": "docker-compose -f docker/docker-compose.dev.yml --env-file .env -p ray-vapes-dev logs -f",
+    "dev:docker:reset": "docker-compose -f docker/docker-compose.dev.yml --env-file .env -p ray-vapes-dev down -v",
+    "format": "prettier --write .",
     "lint": "eslint .",
-    "format": "eslint . --fix",
+    "lint:debug": "eslint . --debug",
+    "lint:fix": "eslint . --fix",
+    "prisma:format": "prisma format",
     "prisma:generate": "prisma generate",
+    "prisma:show": "prisma studio",
     "seed": "tsx prisma/seed.ts",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject ./build && sentry-cli sourcemaps upload ./build",
     "start": "node build/src/index.js",
-    "test": "jest --coverage",
-    "typecheck": "tsc --noEmit"
+    "start:dev": "npm run dev:docker && npm run dev",
+    "test": "prisma generate && jest --coverage"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
